fix: layout overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -465,6 +465,9 @@ body {
 
 .advantages__card-item:first-child,
 .advantages__card-item:last-child {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color:#ffffff;
   background-color: #82b3d3;
 }
@@ -756,6 +759,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 122px;
   margin-right: 11px;
 }
 
@@ -878,6 +882,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 40px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .breadcrumbs__item:not(:last-child)::after {
@@ -1557,10 +1563,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.pagination__item:not(:last-child) {
-  margin-right: 8px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 8px;
 }
 
 .pagination__link {
